add .conf file to kernelupdate-tinker

--- a/sys-kernel/kernelupdate-tinker/files/tinker-s/kernelupdate-tinker.conf
+++ b/sys-kernel/kernelupdate-tinker/files/tinker-s/kernelupdate-tinker.conf
@@ -1,16 +1,38 @@
 # custom configuration for kernelupdate-tinker
 # Joe Brendler 4 September 2023
-#(to do - update kernelupdate-tinker to actuall use this override defaults
-VERBOSE=$TRUE
-verbosity=3
-
-arch="arm"
-cross_compile="armv7a-unknown-linux-gnueabihf-"
-model="tinker-s"
-build_root="/home/joe/MyTinkerboardFiles"
-
+#
+# original commneted entries below are default values copy/edit to change them
+# all non-commented lines must be valid bash commands. (this file is sourced by main script)
+#
+#
+# VERBOSE - Logical dependent on script_header_brendlefly, use for debugging
+#VERBOSE=$TRUE
+#
+# verbosity - how much debug info? higer # = more
+#verbosity=3
+#
+# arch - what architecture?
+#arch="arm"
+#
+# cross_compile - tuple indicating target for cross-compilation
+#cross_compile="armv7a-unknown-linux-gnueabihf-"
+#
+# model - what device? Used to select device tree file (dtb)
+#model="tinker-s"
+#
+# build_root - path to cross development directory tree for this arch/target/model
+#build_root="/home/joe/MyTinkerboardFiles"
+#
+# my_devel_dir - source repository from which to upload content to github (omit trailing '/')
+#my_devel_dir="/home/joe/myUtilities"
+#
+# my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
+#my_ebuild_dir="/home/joe/joetoo/sys-kernel"
+#
 # Note: if it doesn't exist, the first run of kernelupdate-tinker will create
 #  the build_root directory tree.
-# You will also need to retreive kernel sources and symlink ${build_root}/linux to those
-#  sources.  The program will keep that directory clean and build your output
+#
+# First run will also explain that you must retreive kernel sources and
+#  symlink ${build_root}/linux to those sources.
+# The program will keep that directory clean and build your output -
 #  kernel(s), modules, and dtb file(s) in the ${distrib_dir} 
