rename to kernelupdate-embedded

--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded.conf
@@ -1,4 +1,4 @@
-# custom configuration for kernelupdate-tinker
+# custom configuration for kernelupdate-embedded
 # Joe Brendler 4 September 2023
 #
 # original commneted entries below are default values copy/edit to change them
@@ -17,8 +17,9 @@
 # cross_compile - tuple indicating target for cross-compilation
 #cross_compile="armv7a-unknown-linux-gnueabihf-"
 #
-# model - what device? Used to select device tree file (dtb)
-#model="tinker-s"
+# model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
+#         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
+#model="rk3288-tinker-s"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
@@ -29,7 +30,7 @@
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
 #
-# Note: if it doesn't exist, the first run of kernelupdate-tinker will create
+# Note: if it doesn't exist, the first run of kernelupdate-embedded will create
 #  the build_root directory tree.
 #
 # First run will also explain that you must retreive kernel sources and
