fix ownership of build directory tree

--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded.conf
@@ -11,6 +11,9 @@
 # verbosity - how much debug info? higer # = more
 #verbosity=3
 #
+# user - used to set ownership of embedded kernel development files
+#user="joe"
+#
 # arch - what architecture?
 #arch="arm"
 #
