generalize make image zImage vs Image

--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -24,6 +24,9 @@
 #         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
 #
+# image - what is the name of the make target used to generate kernel image
+#image="zImage"
+#
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
 #
