--- a/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
@@ -27,6 +27,9 @@ cross_compile="aarch64-unknown-linux-gnu-"
 #model="rk3288-tinker-s"
 model="bcm2711-rpi-4-b"
 #
+# image - what is the name of the make target used to generate kernel image
+image="Image"
+#
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
 build_root="/home/joe/MyEmbeddedProjectFiles"
