add dtb_folder to configs

--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -27,6 +27,9 @@
 # image - what is the name of the make target used to generate kernel image
 #image="zImage"
 #
+# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+#dtb_folder=""
+#
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
 #
