--- a/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
@@ -30,6 +30,10 @@ model="bcm2711-rpi-4-b"
 # image - what is the name of the make target used to generate kernel image
 image="Image"
 #
+# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+#dtb_folder=""
+dtb_folder="broadcom"
+#
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
 build_root="/home/joe/MyEmbeddedProjectFiles"
