--- a/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
@@ -28,15 +28,16 @@ cross_compile="aarch64-unknown-linux-gnu-"
 model="bcm2711-rpi-4-b"
 #
 # image - what is the name of the make target used to generate kernel image
-image="Image"
+#image="Image"
+image="zImage"
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 dtb_folder="broadcom"
 #
 # build_root - path to cross development directory tree for this arch/target/model
-#build_root="/home/joe/MyTinkerboardFiles"
-build_root="/home/joe/MyEmbeddedProjectFiles"
+#build_root="/home/joe/My_rk3288-tinker-s_Project"
+build_root="/home/joe/My_bcm2711-rpi-4-b_Project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
