--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -32,6 +32,7 @@
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
+build_root="/home/joe/My_rk3288-tinker-s_Project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
