--- a/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
@@ -16,28 +16,25 @@
 #
 # arch - what architecture?
 #arch="arm"
-arch="arm64"
 #
 # cross_compile - tuple indicating target for cross-compilation
 #cross_compile="armv7a-unknown-linux-gnueabihf-"
-cross_compile="aarch64-unknown-linux-gnu-"
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
 #         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
-model="bcm2711-rpi-4-b"
+model="rk3399-rock-pi-4c-plus"
 #
 # image - what is the name of the make target used to generate kernel image
-#image="Image"
-image="zImage"
+#image="zImage"
+image="Image"
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
-dtb_folder="broadcom"
 #
 # build_root - path to cross development directory tree for this arch/target/model
-#build_root="/home/joe/My_rk3288-tinker-s_Project"
-build_root="/home/joe/My_bcm2711-rpi-4-b_project"
+#build_root="/home/joe/MyTinkerboardFiles"
+build_root="/home/joe/My_rk3399-rock-pi-4c-plus_project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
