--- a/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
@@ -29,7 +29,7 @@ model="bcm2711-rpi-4-b"
 #
 # image - what is the name of the make target used to generate kernel image
 #image="Image"
-image="zImage"
+image="Image"
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
@@ -37,7 +37,7 @@ dtb_folder="broadcom"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
-build_root="/home/joe/My_bcm2711-rpi-4-b_project"
+build_root="/home/joe/My_${model}_project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
