--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -22,7 +22,7 @@
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
 #         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
-#model="rk3288-tinker-s"
+model="rk3288-tinker-s"
 #
 # image - what is the name of the make target used to generate kernel image
 #image="zImage"
@@ -32,7 +32,7 @@
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
-build_root="/home/joe/My_rk3288-tinker-s_Project"
+build_root="/home/joe/My_${model}_project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
