--- a/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
@@ -34,7 +34,7 @@ image="Image"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
-build_root="/home/joe/My_rk3399-rock-pi-4c-plus_project"
+build_root="/home/joe/My_${model}_project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
