--- a/sys-kernel/kernelupdate-embedded/files/bcm2712-rpi-5-b/kernelupdate-embedded-bcm2712-rpi-5-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2712-rpi-5-b/kernelupdate-embedded-bcm2712-rpi-5-b.conf
@@ -37,7 +37,7 @@ dtb_folder="broadcom"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
-build_root="/home/joe/My_bcm2712-rpi-5-b_project"
+build_root="/home/joe/My_${model}_project"
 #
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
