fixes for kernelupdate-embedded

--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -27,6 +27,10 @@ model="rk3288-tinker-s"
 # image - what is the name of the make target used to generate kernel image
 #image="zImage"
 #
+# kernel - name of the destination bootable kernel image when deployed
+#kernel=zImage
+kernel=zImage
+#
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 #
