--- a/sys-kernel/kernelupdate-embedded/files/bcm2710-rpi-3-b-plus/kernelupdate-embedded-bcm2710-rpi-3-b-plus.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2710-rpi-3-b-plus/kernelupdate-embedded-bcm2710-rpi-3-b-plus.conf
@@ -31,6 +31,10 @@ model="bcm2710-rpi-3-b-plus"
 #image="Image"
 image="Image"
 #
+# kernel - name of the destination bootable kernel image when deployed
+#kernel=kernel7.img
+kernel=kernel7.img
+#
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 dtb_folder="broadcom"
