--- a/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2711-rpi-4-b/kernelupdate-embedded-bcm2711-rpi-4-b.conf
@@ -31,6 +31,10 @@ model="bcm2711-rpi-4-b"
 #image="Image"
 image="Image"
 #
+# kernel - name of the destination bootable kernel image when deployed
+#kernel=kernel8.img
+kernel=kernel8.img
+#
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 dtb_folder="broadcom"
