--- a/sys-kernel/kernelupdate-embedded/files/bcm2712-rpi-5-b/kernelupdate-embedded-bcm2712-rpi-5-b.conf
+++ b/sys-kernel/kernelupdate-embedded/files/bcm2712-rpi-5-b/kernelupdate-embedded-bcm2712-rpi-5-b.conf
@@ -31,6 +31,10 @@ model="bcm2712-rpi-5-b"
 #image="Image"
 image="zImage"
 #
+# kernel - name of the destination bootable kernel image when deployed
+#kernel=kernel_2712.img
+kernel=kernel_2712.img
+#
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 dtb_folder="broadcom"
