--- a/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3399-rock-pi-4c-plus/kernelupdate-embedded-rk3399-rock-pi-4c-plus.conf
@@ -29,6 +29,11 @@ model="rk3399-rock-pi-4c-plus"
 #image="zImage"
 image="Image"
 #
+# kernel - name of the destination bootable kernel image when deployed
+#kernel=Image
+kernel=Image
+#
+#
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
 #
