--- a/sys-kernel/kernelupdate-embedded/files/rk3399-tinker2-s/rk3399-tinker2-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3399-tinker2-s/rk3399-tinker2-s.conf
@@ -16,9 +16,11 @@
 #
 # arch - what architecture?
 #arch="arm"
+arch="arm64"
 #
 # cross_compile - tuple indicating target for cross-compilation
 #cross_compile="armv7a-unknown-linux-gnueabihf-"
+cross_compile="aarch64-unknown-linux-gnu-"
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
 #         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
