fix dtb_folder for rk3399

--- a/sys-kernel/kernelupdate-embedded/files/rk3399-rock-4c-plus/kernelupdate-embedded-rk3399-rock-4c-plus.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3399-rock-4c-plus/kernelupdate-embedded-rk3399-rock-4c-plus.conf
@@ -38,6 +38,7 @@ kernel=vmlinuz
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
+dtb_folder="rockchip"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
