--- a/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate-embedded/files/rk3288-tinker-s/kernelupdate-embedded-rk3288-tinker-s.conf
@@ -14,6 +14,23 @@
 # user - used to set ownership of embedded kernel development files
 #user="joe"
 #
+# makeopts - set -j# and -l#
+#  -j (--jobs) is the number of simultaneous jobs (basic recommendation is (2 * #cpus) + 1)
+#     (note: total #cpus can be high, in a distcc environment)
+#  -l (--load-average) limits creation of parallel tasks based on the current load average
+#     (do not count remote cpus; basic recommendation is #cpus +1 )
+#makeopts="-j9 -l5"  # example for 4 core system
+# Aggressive setting --
+makeopts=" -j$(( $(( 2 * $(nproc) )) + 1 )) -l$(( $(nproc) + 1 ))"
+#   However, another consider RAM usage. As of 2024, gcc may take 1.5 GB to 2 GB of RAM
+#   per job. Lower the MAKEOPTS value to provide at least 2G RAM per cpu, so the system can
+#   compile without hitting swap very often slowing things down
+# Conserviative setting --
+#makeopts=" -j$(( $(free -g | grep Mem: | awk '{print $2}') / 2)) -l$(( $(nproc) + 1 ))"
+#
+# features - select or de-select features (recommend turning off distcc if otherwise used)
+features=" -userpriv -distcc -distcc-pump"
+#
 # arch - what architecture?
 #arch="arm"
 #
