--- a/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
+++ b/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
@@ -1,5 +1,5 @@
 #/bin/bash
-# /etc/sbc_monitor_for_leds.conf
+# per-board /etc/sbc-status-leds.conf
 # joe brendler; 13 May 2024
 # configure gpio lines to be used in sbc headless status monitor
 #
@@ -8,9 +8,13 @@
 
 chip=0
 line=1
-VPN_LED=(1 15)        # GPIO1_B7 pin 3 (VPN LED)(green)
-SVC_LED=(1 14)        # GPIO1_B6 pin 5 (Services LED)(yellow)
-TEMP_LED=(1 22)       # GPIO1_C6 pin 7 (Temp LED)(red)
+VPN_LED=(7 7)          # GP7A7 pin 36 (VPN LED)(green)
+SVC_LED=(7 8)          # GP7B0 pin 37 (Services LED)(yellow)
+TEMP_LED=(7 18)        # GP7C2 pin 28 (Temp LED)(red)
+# above reflects actual wiring of TINKER06 - redo if using new header on pins 3/5/7/9 
+#VPN_LED=(8 4)          # GP8A4 pin 3 (VPN LED)(green)
+#SVC_LED=(8 5)          # GP8A5 pin 5 (Services LED)(yellow)
+#TEMP_LED=(0 17)        # GP0C1 pin 7 (Temp LED)(red)
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
