--- a/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3399-tinker-2-s.conf
+++ b/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3399-tinker-2-s.conf
@@ -1,5 +1,5 @@
 #/bin/bash
-# /etc/sbc_monitor_for_leds.conf
+# per-board /etc/sbc-status-leds.conf
 # joe brendler; 13 May 2024
 # configure gpio lines to be used in sbc headless status monitor
 #
@@ -8,10 +8,9 @@
 
 chip=0
 line=1
-VPN_LED=(0 2)         # GPIO2 pin 3 (VPN LED)(green)
-SVC_LED=(0 3)         # GPIO3 pin 5 (Services LED)(yellow)
-TEMP_LED=(0 4)        # GPIO4 pin 7 (Temp LED)(red)
-# Raspberry 4/5 GPIO pins are all on chip 4 Raspberry Pi 2/3 GPIO pins are all on chip 0
+VPN_LED=(2 9)         # GPIO2_B1 pin 3 (VPN LED)(green)
+SVC_LED=(2 10)        # GPIO2_B2 pin 5 (Services LED)(yellow)
+TEMP_LED=(0 8)        # GPIO0_B0 pin 7 (Temp LED)(red)
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
@@ -20,6 +19,7 @@ wait_time=30          # s wait for ping
 vpn_server_ip="192.168.63.1"
 
 vpn_status_file="/root/bin/vpn_status"
+
 
 cputempfile=/sys/class/thermal/thermal_zone0/temp
 temp_threshold=60     # deg celcius above which to consider cpu to be hot
