--- a/dev-embedded/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b-plus.conf
+++ b/dev-embedded/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b-plus.conf
@@ -1,5 +1,5 @@
 #/bin/bash
-# /etc/sbc_monitor_for_leds.conf
+# per-board /etc/sbc-status-leds.conf
 # joe brendler; 13 May 2024
 # configure gpio lines to be used in sbc headless status monitor
 #
@@ -8,13 +8,10 @@
 
 chip=0
 line=1
-VPN_LED=(7 7)          # GP7A7 pin 36 (VPN LED)(green)
-SVC_LED=(7 8)          # GP7B0 pin 37 (Services LED)(yellow)
-TEMP_LED=(7 18)        # GP7C2 pin 28 (Temp LED)(red)
-# above reflects actual wiring of TINKER06 - redo if using new header on pins 3/5/7/9 
-#VPN_LED=(8 4)          # GP8A4 pin 3 (VPN LED)(green)
-#SVC_LED=(8 5)          # GP8A5 pin 5 (Services LED)(yellow)
-#TEMP_LED=(0 17)        # GP0C1 pin 7 (Temp LED)(red)
+VPN_LED=(0 2)         # GPIO2 pin 3 (VPN LED)(green)
+SVC_LED=(0 3)         # GPIO3 pin 5 (Services LED)(yellow)
+TEMP_LED=(0 4)        # GPIO4 pin 7 (Temp LED)(red)
+# Raspberry 4/5 GPIO pins are all on chip 4 Raspberry Pi 2/3 GPIO pins are all on chip 0
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
@@ -23,7 +20,6 @@ wait_time=30          # s wait for ping
 vpn_server_ip="192.168.63.1"
 
 vpn_status_file="/root/bin/vpn_status"
-
 
 cputempfile=/sys/class/thermal/thermal_zone0/temp
 temp_threshold=60     # deg celcius above which to consider cpu to be hot
