--- a/dev-embedded/sbc-status-leds/files/sbc-status-leds-bcm2711-rpi-4-b.conf
+++ b/dev-embedded/sbc-status-leds/files/sbc-status-leds-bcm2711-rpi-4-b.conf
@@ -1,5 +1,5 @@
 #/bin/bash
-# /etc/sbc_monitor_for_leds.conf
+# per-board /etc/sbc-status-leds.conf
 # joe brendler; 13 May 2024
 # configure gpio lines to be used in sbc headless status monitor
 #
