--- a/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3399-rock-pi-4c-plus.conf
+++ b/dev-embedded/sbc-status-leds/files/sbc-status-leds-rk3399-rock-pi-4c-plus.conf
@@ -1,5 +1,5 @@
 #/bin/bash
-# /etc/sbc_monitor_for_leds.conf
+# per-board /etc/sbc-status-leds.conf
 # joe brendler; 13 May 2024
 # configure gpio lines to be used in sbc headless status monitor
 #
@@ -8,9 +8,13 @@
 
 chip=0
 line=1
-VPN_LED=(2 9)         # GPIO2_B1 pin 3 (VPN LED)(green)
-SVC_LED=(2 10)        # GPIO2_B2 pin 5 (Services LED)(yellow)
-TEMP_LED=(0 8)        # GPIO0_B0 pin 7 (Temp LED)(red)
+VPN_LED=(4 7)         # GPIO4_A7 pin 40 (VPN LED)(green)
+SVC_LED=(4 6)         # GPIO4_A6 pin 38 (Services LED)(yellow)
+TEMP_LED=(4 4)        # GPIO4_A4 pin 36 (Temp LED)(red)
+# above reflects actual wiring of rock4c6401 - redo if using new header on pins 3/5/7/9
+#VPN_LED=(2 7)         # GPIO2_A7 pin 3 (VPN LED)(green)
+#SVC_LED=(2 8)         # GPIO2_B0 pin 5 (Services LED)(yellow)
+#TEMP_LED=(2 11)       # GPIO2_B3 pin 7 (Temp LED)(red)
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
