fix gpio pin assignment for pi4

--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b-plus.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b-plus.conf
@@ -11,7 +11,7 @@ line=1
 VPN_LED=(0 2)         # GPIO2 pin 3 (VPN LED)(green)
 SVC_LED=(0 3)         # GPIO3 pin 5 (Services LED)(yellow)
 TEMP_LED=(0 4)        # GPIO4 pin 7 (Temp LED)(red)
-# Raspberry 4/5 GPIO pins are all on chip 4 Raspberry Pi 2/3 GPIO pins are all on chip 0
+# Raspberry 2/3/4 GPIO pins are all on chip 0
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
