--- a/sys-kernel/kernelupdate/files/rk3399-tinker2-s/rk3399-tinker2-s.conf
+++ b/sys-kernel/kernelupdate/files/rk3399-tinker2-s/rk3399-tinker2-s.conf
@@ -1,4 +1,4 @@
-# custom configuration for kernelupdate-embedded
+# custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
 # original commneted entries below are default values copy/edit to change them
@@ -11,7 +11,7 @@
 # verbosity - how much debug info? higer # = more
 #verbosity=3
 #
-# user - used to set ownership of embedded kernel development files
+# user - used to set ownership of kernel development files
 #user="joe"
 #
 # makeopts - set -j# and -l#
@@ -40,7 +40,7 @@ arch="arm64"
 cross_compile="aarch64-unknown-linux-gnu-"
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
-#         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
+#         the command "${make_model} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
 model="rk3399-tinker-2-s"
 #
@@ -67,7 +67,7 @@ build_root="/home/joe/My_${model}_project"
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
 #
-# Note: if it doesn't exist, the first run of kernelupdate-embedded will create
+# Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
 #
 # First run will also explain that you must retreive kernel sources and
