--- a/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
+++ b/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
@@ -1,4 +1,4 @@
-# custom configuration for kernelupdate-embedded
+# custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
 # original commneted entries below are default values copy/edit to change them
@@ -11,7 +11,7 @@
 # verbosity - how much debug info? higer # = more
 #verbosity=3
 #
-# user - used to set ownership of embedded kernel development files
+# user - used to set ownership of kernel development files
 #user="joe"
 #
 # makeopts - set -j# and -l#
@@ -40,17 +40,17 @@ arch="arm64"
 cross_compile="aarch64-unknown-linux-gnu-"
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
-#         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
+#         the command "${make_model} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
-model="bcm2711-rpi-4-b"
+model="bcm2710-rpi-3-b-plus"
 #
 # image - what is the name of the make target used to generate kernel image
 #image="Image"
 image="Image"
 #
 # kernel - name of the destination bootable kernel image when deployed
-#kernel=kernel8.img
-kernel=kernel8.img
+#kernel=kernel7.img
+kernel=kernel7.img
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
@@ -66,7 +66,7 @@ build_root="/home/joe/My_${model}_project"
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
 #
-# Note: if it doesn't exist, the first run of kernelupdate-embedded will create
+# Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
 #
 # First run will also explain that you must retreive kernel sources and
