--- a/sys-kernel/kernelupdate/files/bcm2711-rpi-4-b/kernelupdate-bcm2711-rpi-4-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2711-rpi-4-b/kernelupdate-bcm2711-rpi-4-b.conf
@@ -1,4 +1,4 @@
-# custom configuration for kernelupdate-embedded
+# custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
 # original commneted entries below are default values copy/edit to change them
@@ -11,7 +11,7 @@
 # verbosity - how much debug info? higer # = more
 #verbosity=3
 #
-# user - used to set ownership of embedded kernel development files
+# user - used to set ownership of kernel development files
 #user="joe"
 #
 # makeopts - set -j# and -l#
@@ -31,31 +31,30 @@ makeopts=" -j$(( $(( 2 * $(nproc) )) + 1 )) -l$(( $(nproc) + 1 ))"
 # features - select or de-select features (recommend turning off distcc if otherwise used)
 features=" -userpriv -distcc -distcc-pump"
 #
-# arch - what architecture? (ignored if not used in make_model, with cross_compile)
+# arch - what architecture?
 #arch="arm"
-arch="x86_64"
+arch="arm64"
 #
 # cross_compile - tuple indicating target for cross-compilation
 #cross_compile="armv7a-unknown-linux-gnueabihf-"
-#cross_compile="x86_64-pc-linux-gnu-"
-cross_compile=""
+cross_compile="aarch64-unknown-linux-gnu-"
 #
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
-#         the command "${make_embedded} dtbs" (run manually in kernel build directory to list)
+#         the command "${make_model} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
-model="domU"
+model="bcm2711-rpi-4-b"
 #
 # image - what is the name of the make target used to generate kernel image
 #image="Image"
-image="bzImage"
+image="Image"
 #
 # kernel - name of the destination bootable kernel image when deployed
 #kernel=kernel8.img
-kernel=vmlinuz
+kernel=kernel8.img
 #
 # dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
 #dtb_folder=""
-dtb_folder=""
+dtb_folder="broadcom"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
@@ -67,11 +66,7 @@ build_root="/home/joe/My_${model}_project"
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
 #
-# host_dir - location inside build_root to store kernel images for xen client use via symlink 
-#host_dir="domU_kernel_images"
-host_dir=${build_root}/"domU_kernel_images"
-#
-# Note: if it doesn't exist, the first run of kernelupdate-embedded will create
+# Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
 #
 # First run will also explain that you must retreive kernel sources and
