--- a/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
+++ b/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
@@ -1,3 +1,4 @@
+# kernelconfig.conf file for board: bcm2710-rpi-3-b-plus
 # custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
