--- a/sys-kernel/kernelupdate/files/rk3399-rock-4c-plus/kernelupdate-rk3399-rock-4c-plus.conf
+++ b/sys-kernel/kernelupdate/files/rk3399-rock-4c-plus/kernelupdate-rk3399-rock-4c-plus.conf
@@ -1,3 +1,4 @@
+# kernelconfig.conf file for board: rk3399-rock-4c-plus
 # custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
