rename rk3399-tinker-2 and add supporting files for rk3588s-orangepi-5

--- a/sys-kernel/kernelupdate/files/rk3588s-orangepi-5/kernelupdate-rk3588s-orangepi-5.conf
+++ b/sys-kernel/kernelupdate/files/rk3588s-orangepi-5/kernelupdate-rk3588s-orangepi-5.conf
@@ -43,7 +43,7 @@ cross_compile="aarch64-unknown-linux-gnu-"
 # model - what device? Used to select device tree file (dtb), so it must name a dtb file produced by
 #         the command "${make_model} dtbs" (run manually in kernel build directory to list)
 #model="rk3288-tinker-s"
-model="rk3399-tinker-2-s"
+model="rk3588s-orangepi-5"
 #
 # image - what is the name of the make target used to generate kernel image
 #image="zImage"
