start to add credentials

--- a/sys-kernel/kernelupdate/files/bcm2708-rpi-b/kernelupdate-bcm2708-rpi-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2708-rpi-b/kernelupdate-bcm2708-rpi-b.conf
@@ -1,3 +1,5 @@
+
+
 # kernelconfig.conf file for board: bcm2708-rpi-b
 # custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
@@ -66,8 +68,20 @@ build_root="/home/joe/My_${model}_project"
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
 #
+# my_devel_dir_credentials - loc. of github user/password (put in .git to avoid upload)
+#   this will be sourced by build script, so it must be legit bash assignments
+#   of user="somebody" and pass="somesecret"
+#my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+#
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
+#
+# my_ebuild_dir_credentials - loc. of github user/password (put in .git to avoid upload)
+#   this will be sourced by build script, so it must be legit bash assignments
+#   of user="somebody" and pass="somesecret"
+#my_ebuild_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+my_ebuild_dir_credentials="/home/joe/myUtilities/.git/.credentials"
 #
 # Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
@@ -75,4 +89,6 @@ build_root="/home/joe/My_${model}_project"
 # First run will also explain that you must retreive kernel sources and
 #  symlink ${build_root}/linux to those sources.
 # The program will keep that directory clean and build your output -
-#  kernel(s), modules, and dtb file(s) in the ${distrib_dir} 
+#  kernel(s), modules, and dtb file(s) in the ${distrib_dir}
+
+
