add github credentials for publishing

--- a/sys-kernel/kernelupdate/files/bcm2708-rpi-b/kernelupdate-bcm2708-rpi-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2708-rpi-b/kernelupdate-bcm2708-rpi-b.conf
@@ -1,5 +1,3 @@
-
-
 # kernelconfig.conf file for board: bcm2708-rpi-b
 # custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
@@ -35,8 +33,8 @@ makeopts=" -j$(( $(( 2 * $(nproc) )) + 1 )) -l$(( $(nproc) + 1 ))"
 features=" -userpriv -distcc -distcc-pump"
 #
 # arch - what architecture?
+#arch="arm"
 arch="arm"
-#arch="arm64"
 #
 # cross_compile - tuple indicating target for cross-compilation
 cross_compile="armv6j-unknown-linux-gnueabihf-"
@@ -80,8 +78,8 @@ my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
 # my_ebuild_dir_credentials - loc. of github user/password (put in .git to avoid upload)
 #   this will be sourced by build script, so it must be legit bash assignments
 #   of user="somebody" and pass="somesecret"
-#my_ebuild_dir_credentials="/home/joe/myUtilities/.git/.credentials"
-my_ebuild_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+#my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
+my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
 #
 # Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
@@ -90,5 +88,3 @@ my_ebuild_dir_credentials="/home/joe/myUtilities/.git/.credentials"
 #  symlink ${build_root}/linux to those sources.
 # The program will keep that directory clean and build your output -
 #  kernel(s), modules, and dtb file(s) in the ${distrib_dir}
-
-
