--- a/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
+++ b/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
@@ -65,10 +65,22 @@ build_root="/home/joe/My_${model}_project"
 # my_devel_dir - source repository from which to upload content to github (omit trailing '/')
 #my_devel_dir="/home/joe/myUtilities"
 #
+# my_devel_dir_credentials - loc. of github user/password (put in .git to avoid upload)
+#   this will be sourced by build script, so it must be legit bash assignments
+#   of user="somebody" and pass="somesecret"
+#my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
+#
 # my_ebuild_dir - ebuild repository from which to upload content to github (omit trailing '/')
 #my_ebuild_dir="/home/joe/joetoo/sys-kernel"
 #
-# host_dir - location inside build_root to store kernel images for xen client use via symlink 
+# my_ebuild_dir_credentials - loc. of github user/password (put in .git to avoid upload)
+#   this will be sourced by build script, so it must be legit bash assignments
+#   of user="somebody" and pass="somesecret"
+#my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
+my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
+#
+# host_dir - location inside build_root to store kernel images for xen client use via symlink
 #host_dir="domU_kernel_images"
 host_dir=${build_root}/"domU_kernel_images"
 #
@@ -78,4 +90,4 @@ host_dir=${build_root}/"domU_kernel_images"
 # First run will also explain that you must retreive kernel sources and
 #  symlink ${build_root}/linux to those sources.
 # The program will keep that directory clean and build your output -
-#  kernel(s), modules, and dtb file(s) in the ${distrib_dir} 
+#  kernel(s), modules, and dtb file(s) in the ${distrib_dir}
