amend handling of dtb_folder and add overlay_folder (for install_dtbs and its overlays)

--- a/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
+++ b/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b-plus/kernelupdate-bcm2710-rpi-3-b-plus.conf
@@ -53,9 +53,13 @@ image="Image"
 #kernel=kernel7.img
 kernel=kernel7.img
 #
-# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+# dtb_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts dtb files          
 #dtb_folder=""
 dtb_folder="broadcom"
+#
+# overlay_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts overlay files          
+#overlay_folder=""
+overlay_folder="overlays"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
