--- a/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
@@ -54,9 +54,13 @@ image="Image"
 kernel=kernel7.img   ## kernel7.img is for arch=arm (32 bit)
 #kernel=kernel8.img
 #
-# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+# dtb_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts dtb files          
 #dtb_folder=""
 dtb_folder="broadcom"
+#
+# overlay_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts overlay files          
+#overlay_folder=""
+overlay_folder="overlays"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
