--- a/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
+++ b/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
@@ -54,9 +54,13 @@ image="bzImage"
 #kernel=kernel8.img
 kernel=vmlinuz
 #
-# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+# dtb_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts dtb files          
 #dtb_folder=""
 dtb_folder=""
+#
+# overlay_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts overlay files          
+#overlay_folder=""
+overlay_folder=""
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/My_rk3288-tinker-s_Project"
