--- a/sys-kernel/kernelupdate/files/rk3288-tinker-s/kernelupdate-rk3288-tinker-s.conf
+++ b/sys-kernel/kernelupdate/files/rk3288-tinker-s/kernelupdate-rk3288-tinker-s.conf
@@ -49,8 +49,13 @@ model="rk3288-tinker-s"
 #kernel=zImage
 kernel=zImage
 #
-# dtb_folder - name of folder in which "make dtbs" places dtb files (if used)
+# dtb_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts dtb files          
 #dtb_folder=""
+dtb_folder="rockchip"
+#
+# overlay_folder - relative to build/${model}/arch/${ARCH}/boot/dts - where "make dtbs" puts overlay files          
+#overlay_folder=""
+overlay_folder="rockchip/overlay"
 #
 # build_root - path to cross development directory tree for this arch/target/model
 #build_root="/home/joe/MyTinkerboardFiles"
