make checks optional, set in .conf

--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2708-rpi-b.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2708-rpi-b.conf
@@ -32,3 +32,10 @@ VERBOSE=$TRUE    # verbpse logging on/off
 
 verbosity=3     # 0: none; 1: restarts; 2: errors; 3: success
 
+# Checks are optional, set to $TRUE or $FALSE
+#   e.g. if vpn is not being used, set $FALSE, and it will blink and just light up the green led
+
+CHECKVPN=$TRUE
+CHECKSVC=$TRUE
+CHECKTEMP=$TRUE
+
