--- a/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
@@ -2,6 +2,8 @@
 # custom configuration for kernelupdate
 # Joe Brendler 4 September 2023
 #
+# Please review: https://www.raspberrypi.com/documentation/computers/linux_kernel.html
+#
 # original commneted entries below are default values copy/edit to change them
 # all non-commented lines must be valid bash commands. (this file is sourced by main script)
 #
