switch xdo... to lxterminal, since konsole is evidently wayland, not x now

--- a/dev-util/joetoolkit/files/joetoolkit/xdotool_open_windows.conf
+++ b/dev-util/joetoolkit/files/joetoolkit/xdotool_open_windows.conf
@@ -20,8 +20,8 @@ X2="47%"
 
 # custom files
 logFile="/home/joe/xdotool_open_windows.log"
-terminal_program=/usr/bin/konsole
-#terminal_program=/usr/bin/lxterminal
+#terminal_program=/usr/bin/konsole
+terminal_program=/usr/bin/lxterminal
 #terminal_program=/usr/bin/uxterm
 
 # customized timing and detaild output (increase for debugging)
@@ -31,29 +31,14 @@ VERBOSE=$TRUE
 #VERBOSE=$FALSE
 verbosity=3
 
-#ssh_session_list=( \
-#             x_blank x_blank \
-#             x_blank x_blank \
-#             x_blank x_blank \
-#             x_blank x_blank \
-#             x_blank x_blank \
-#             x_blank x_blank \
-#             )
-
 ssh_session_list=( \
-             x_me x_blank \
-             slim slim2 \
-             spartacus oromis \
              x_blank x_blank \
              x_blank x_blank \
-             pascal cantor \
-             euler x_finwe \
-             zelda x_blank \
+             x_blank x_blank \
+             x_blank x_blank \
              x_blank x_blank \
              x_blank x_blank \
              )
-terminal_program=/usr/bin/konsole
-#terminal_program=/usr/bin/lxterminal
 
 # pause to allow automated actions to complete
 # sleepwait=0.5
