--- a/dev-util/joetoolkit/files/joetoolkit/xdotool_open_windows.conf
+++ b/dev-util/joetoolkit/files/joetoolkit/xdotool_open_windows.conf
@@ -11,6 +11,10 @@
 # layout.
 #
 
+### to-do + enable up to three windows per desktop (how many on the line below)
+###       + use remina to open vnc/ssh if line has r_<name>
+
+
 # Custom window size and location
 width="42%"
 height="85%"
@@ -18,30 +22,48 @@ X1="1%"
 Y1="5%"
 X2="47%"
 
+user=joe
+
 # custom files
 logFile="/home/joe/xdotool_open_windows.log"
+
 #terminal_program=/usr/bin/konsole
 terminal_program=/usr/bin/lxterminal
 #terminal_program=/usr/bin/uxterm
 
 # customized timing and detaild output (increase for debugging)
-sleepWait=0.5    # default - set in .conf
-longWait=2       # default - set in .conf
+#sleepWait=0.5    # default - set in .conf
+sleepWait=0.15    # default - set in .conf
+#longWait=2       # default - set in .conf
+longWait=0.6       # default - set in .conf
 VERBOSE=$TRUE
 #VERBOSE=$FALSE
 verbosity=3
 
+#ssh_session_list=( \
+#  x_blank x_blank \
+#  x_blank x_blank \
+#  )
+
 ssh_session_list=( \
-             x_blank x_blank \
-             x_blank x_blank \
-             x_blank x_blank \
-             x_blank x_blank \
-             x_blank x_blank \
-             x_blank x_blank \
-             )
-
-# pause to allow automated actions to complete
-# sleepwait=0.5
-
-# pause to allow new terminal window to finish openning
-#longWait=2
+  x_me x_me \
+  tahawus tahawus \
+  Elrond Elrond \
+  katahdin katahdin \
+  nuoromis nuoromis \
+  g3nuc01 g3nuc01 \
+  slim2 slim2 \
+  slim slim \
+  euler gauss \
+  x_blank x_blank \
+  raspi23202 raspi23201 \
+  raspi33201 raspi13201 \
+  raspi36402 raspi36401 \
+  raspi46402 raspi46401 \
+  raspi401 raspi46403 \
+  raspi56403 raspi56401 \
+  raspi56404 x_blank \
+  raspi56407 raspi56406 \
+  tinker2s6403 tinker06 \
+  opi5b6402  rock4c6401 \
+  )
