--- a/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b/kernelupdate-bcm2710-rpi-3-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2710-rpi-3-b/kernelupdate-bcm2710-rpi-3-b.conf
@@ -86,6 +86,9 @@ my_devel_dir_credentials="/home/joe/myUtilities/.git/.credentials"
 #my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
 my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
 #
+# INTERACTIVE - ask user y/n to proceed from one command sequnce step to the next
+INTERACTIVE=${TRUE}
+#
 # Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
 #
