--- a/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
+++ b/sys-kernel/kernelupdate/files/domU/kernelupdate-domU.conf
@@ -90,6 +90,9 @@ my_ebuild_dir_credentials="/home/joe/joetoo/.git/.credentials"
 #host_dir="domU_kernel_images"
 host_dir=${build_root}/"domU_kernel_images"
 #
+# INTERACTIVE - ask user y/n to proceed from one command sequnce step to the next
+INTERACTIVE=${TRUE}
+#
 # Note: if it doesn't exist, the first run of kernelupdate will create
 #  the build_root directory tree.
 #
