--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
@@ -6,11 +6,13 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
+# Array index for chip and line numbers
 chip=0
 line=1
-VPN_LED=(1 15)        # GPIO1_B7 pin 3 (VPN LED)(green)
-SVC_LED=(1 14)        # GPIO1_B6 pin 5 (Services LED)(yellow)
-TEMP_LED=(1 22)       # GPIO1_C6 pin 7 (Temp LED)(red)
+# determined experimentally for rock 5c (documentation is wrong)
+VPN_LED=(1 31)        # GPIO1_D7 pin 3 (VPN LED)(green)
+SVC_LED=(1 30)        # GPIO1_D6 pin 5 (Services LED)(yellow)
+TEMP_LED=(1 11)       # GPIO1_B3 pin 7 (Temp LED)(red)
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
@@ -38,3 +40,4 @@ verbosity=3     # 0: none; 1: restarts; 2: errors; 3: success
 CHECKVPN=$TRUE
 CHECKSVC=$TRUE
 CHECKTEMP=$TRUE
+
