--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2710-rpi-3-b.conf
@@ -6,12 +6,15 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
+# Array index (e.g. ${VPN_LED[$chip]} = ${VPN_LED[0]} = 0 and ${VPN_LED[$LINE]} [1] = 2)
 chip=0
 line=1
+
 VPN_LED=(0 2)         # GPIO2 pin 3 (VPN LED)(green)
 SVC_LED=(0 3)         # GPIO3 pin 5 (Services LED)(yellow)
 TEMP_LED=(0 4)        # GPIO4 pin 7 (Temp LED)(red)
-# Raspberry 2/3/4 GPIO pins are all on chip 0
+# Raspberry Pi GPIO pins are all on chip 0
+# set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
