--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
@@ -6,12 +6,16 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
+# Array index (e.g. ${VPN_LED[$chip]} = ${VPN_LED[0]} = 0 and ${VPN_LED[$LINE]} [1] = 2)
 chip=0
 line=1
+
 VPN_LED=(7 7)          # GP7A7 pin 36 (VPN LED)(green)
 SVC_LED=(7 8)          # GP7B0 pin 37 (Services LED)(yellow)
 TEMP_LED=(7 18)        # GP7C2 pin 28 (Temp LED)(red)
 # above reflects actual wiring of TINKER06 - redo if using new header on pins 3/5/7/9 
+# set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
+
 #VPN_LED=(8 4)          # GP8A4 pin 3 (VPN LED)(green)
 #SVC_LED=(8 5)          # GP8A5 pin 5 (Services LED)(yellow)
 #TEMP_LED=(0 17)        # GP0C1 pin 7 (Temp LED)(red)
