--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3399-rock-pi-4c-plus.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3399-rock-pi-4c-plus.conf
@@ -6,12 +6,16 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
+# Array index (e.g. ${VPN_LED[$chip]} = ${VPN_LED[0]} = 0 and ${VPN_LED[$LINE]} [1] = 2)
 chip=0
 line=1
+
 VPN_LED=(4 7)         # GPIO4_A7 pin 40 (VPN LED)(green)
 SVC_LED=(4 6)         # GPIO4_A6 pin 38 (Services LED)(yellow)
 TEMP_LED=(4 4)        # GPIO4_A4 pin 36 (Temp LED)(red)
 # above reflects actual wiring of rock4c6401 - redo if using new header on pins 3/5/7/9
+# set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
+
 #VPN_LED=(2 7)         # GPIO2_A7 pin 3 (VPN LED)(green)
 #SVC_LED=(2 8)         # GPIO2_B0 pin 5 (Services LED)(yellow)
 #TEMP_LED=(2 11)       # GPIO2_B3 pin 7 (Temp LED)(red)
