--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3399-tinker-2.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3399-tinker-2.conf
@@ -6,11 +6,14 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
+# Array index (e.g. ${VPN_LED[$chip]} = ${VPN_LED[0]} = 0 and ${VPN_LED[$LINE]} [1] = 2)
 chip=0
 line=1
+
 VPN_LED=(2 9)         # GPIO2_B1 pin 3 (VPN LED)(green)
 SVC_LED=(2 10)        # GPIO2_B2 pin 5 (Services LED)(yellow)
 TEMP_LED=(0 8)        # GPIO0_B0 pin 7 (Temp LED)(red)
+# set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
