--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
@@ -6,13 +6,15 @@
 # Note gpioset syntax:  gpioset -c <chip#> -t<toggleduration> <line#>=0 (off; =1 for on)
 # Convention:  GPIOH_XN is chip=H and line= 8*X + N
 
-# Array index for chip and line numbers
+# Array index (e.g. ${VPN_LED[$chip]} = ${VPN_LED[0]} = 0 and ${VPN_LED[$LINE]} [1] = 2)
 chip=0
 line=1
+
 # determined experimentally for rock 5c (documentation is wrong)
 VPN_LED=(1 31)        # GPIO1_D7 pin 3 (VPN LED)(green)
 SVC_LED=(1 30)        # GPIO1_D6 pin 5 (Services LED)(yellow)
 TEMP_LED=(1 11)       # GPIO1_B3 pin 7 (Temp LED)(red)
+# set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
 
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
