ssh auth socket to kernelupdate and add 6.11.9 to linux-joetoo-kernelimage

--- a/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
+++ b/sys-kernel/kernelupdate/files/bcm2709-rpi-2-b/kernelupdate-bcm2709-rpi-2-b.conf
@@ -96,3 +96,6 @@ INTERACTIVE=${TRUE}
 #  symlink ${build_root}/linux to those sources.
 # The program will keep that directory clean and build your output -
 #  kernel(s), modules, and dtb file(s) in the ${distrib_dir}
+#
+#SSH_AUTH_SOC - authorization socket for ssh-agent/-add as fixed env var (allows re-use)
+SSH_AUTH_SOCK="/home/joe/.ssh/ssh-agent.sock"
