--- a/sys-kernel/kernelupdate/files/rk3588s-orangepi-5/kernelupdate-rk3588s-orangepi-5.conf
+++ b/sys-kernel/kernelupdate/files/rk3588s-orangepi-5/kernelupdate-rk3588s-orangepi-5.conf
@@ -96,3 +96,6 @@ INTERACTIVE=${TRUE}
 #  symlink ${build_root}/linux to those sources.
 # The program will keep that directory clean and build your output -
 #  kernel(s), modules, and dtb file(s) in the ${distrib_dir}
+#
+#SSH_AUTH_SOC - authorization socket for ssh-agent/-add as fixed env var (allows re-use)
+SSH_AUTH_SOCK="/home/joe/.ssh/ssh-agent.sock"
