take temp from highest of multiple thermal zones

--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3588s-rock-5c.conf
@@ -25,7 +25,7 @@ vpn_server_ip="192.168.63.1"
 vpn_status_file="/root/bin/vpn_status"
 
 
-cputempfile=/sys/class/thermal/thermal_zone0/temp
+thermalzones='/sys/class/thermal/thermal_zone*'
 temp_threshold=60     # deg celcius above which to consider cpu to be hot
 
 #NEED_WORKAROUND=$TRUE
