--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-x4-n100.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-x4-n100.conf
@@ -27,7 +27,7 @@ wait_time=30          # s wait for ping
 vpn_server_ip="192.168.63.1"
 vpn_status_file="/root/bin/vpn_status"
 
-cputempfile=/sys/class/thermal/thermal_zone0/temp
+thermalzones='/sys/class/thermal/thermal_zone*'
 temp_threshold=60     # deg celcius above which to consider cpu to be hot
 
 PROG_NAME="sbc-status-leds"
