make n blinks configurable

--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-x4-n100.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-x4-n100.conf
@@ -24,6 +24,8 @@ blinkwait=0.1         # s wait during fluttler blink
 #wait_time=2          # s wait for ping
 wait_time=30          # s wait for ping
 
+BLINKS=3              # how many times to blink
+
 vpn_server_ip="192.168.63.1"
 vpn_status_file="/root/bin/vpn_status"
 
@@ -40,4 +42,4 @@ NEED_WORKAROUND=$FALSE
 #VERBOSE=$FALSE
 VERBOSE=$TRUE    # verbpse logging pm/off
 #verbosity=2     # 0: none; 1: restarts; 2: errors; 3: success; 4: dump
-verbosity=3 
+verbosity=3
