--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2708-rpi-b.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-bcm2708-rpi-b.conf
@@ -20,6 +20,8 @@ blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
 wait_time=30          # s wait for ping
 
+BLINKS=5              # how many times to blink
+
 vpn_server_ip="192.168.63.1"
 
 vpn_status_file="/root/bin/vpn_status"
@@ -41,4 +43,3 @@ verbosity=3     # 0: none; 1: restarts; 2: errors; 3: success
 CHECKVPN=$TRUE
 CHECKSVC=$TRUE
 CHECKTEMP=$TRUE
-
