--- a/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
+++ b/dev-sbc/sbc-status-leds/files/sbc-status-leds-rk3288-tinker-s.conf
@@ -13,7 +13,7 @@ line=1
 VPN_LED=(7 7)          # GP7A7 pin 36 (VPN LED)(green)
 SVC_LED=(7 8)          # GP7B0 pin 37 (Services LED)(yellow)
 TEMP_LED=(7 18)        # GP7C2 pin 28 (Temp LED)(red)
-# above reflects actual wiring of TINKER06 - redo if using new header on pins 3/5/7/9 
+# above reflects actual wiring of TINKER06 - redo if using new header on pins 3/5/7/9
 # set VPN_LED with # gpioset -c ${VPN_LED[$chip]} -t0 ${VPN_LED[$line]}=0
 
 #VPN_LED=(8 4)          # GP8A4 pin 3 (VPN LED)(green)
@@ -23,6 +23,8 @@ TEMP_LED=(7 18)        # GP7C2 pin 28 (Temp LED)(red)
 blinkwait=0.05        # s wait during fluttler blink
 blinklongwait=0.5     # s wait during blink between flutters
 wait_time=30          # s wait for ping
+
+BLINKS=5              # how many times to blink
 
 vpn_server_ip="192.168.63.1"
 
